<resources>
    <string name="app_name">newsflow</string>

    <!-- Navigation -->
    <string name="headlines">News</string>
    <string name="my_news">My News</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back_to_main">Back to Main</string>
    <string name="welcome_to_split">Welcome to Split</string>
    <string name="sign_up">Sign-Up</string>
    <string name="name">Name</string>
    <string name="sign_me_up">Sign Me Up</string>
    <string name="user_image_profile">User Image Profile</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">Password</string>
    <string name="login_success">"Logged in succesfully "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_news">Search news...</string>
    <string name="add_news">Add News</string>
    <string name="enter_your_city_name">Enter Your City Name</string>
    <string name="select_your_profile_picture">Touch The Logo To Select Your Profile Picture</string>
    <string name="edit_user">Edit User</string>
    <string name="no_changes">No changes Where Made</string>

    <!-- Titles -->
    <string name="feed">Feed</string>

    <!-- Placeholders -->
    <string name="source_placeholder">Go To Source</string>
    <string name="title_placeholder">TITLE</string>
    <string name="desc_placeholder">DESCRIPTION</string>
    <string name="date_time_placeholder">DATE TIME</string>
    <string name="country_placeholder">COUNTRY</string>
    <string name="image_error">There was error when displaying your image</string>
    <string name="log_in">Log In</string>
    <string name="sign">Don\'t have a user? Sign Up</string>
    <string name="line">________________________________</string>
    <string name="log">Already Have A User? Log In</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_img">Select A Picture As Your Profile Image</string>
    <string name="select_img">Select A Picture For Your Article</string>
    <string name="log_out">Log Out</string>
    <string name="time_placeholder">RELATIVE TIME</string>
    <string name="username_placeholder">USERNAME</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci dapibus ultrices in iaculis nunc sed augue. Augue ut lectus arcu bibendum at varius vel pharetra vel. Nullam non nisi est sit amet facilisis magna etiam tempor. Pulvinar mattis nunc sed blandit libero. Morbi non arcu risus quis varius quam quisque id diam. Elementum pulvinar etiam non quam lacus. Quis commodo odio aenean sed adipiscing diam donec adipiscing tristique. Est ultricies integer quis auctor elit sed. Arcu dictum varius duis at. Pretium fusce id velit ut tortor. Pellentesque diam volutpat commodo sed egestas. Quis vel eros donec ac odio tempor orci dapibus ultrices. Consequat mauris nunc congue nisi vitae suscipit.

        Sodales ut etiam sit amet nisl. Interdum consectetur libero id faucibus nisl tincidunt eget. Viverra suspendisse potenti nullam ac tortor vitae purus. In cursus turpis massa tincidunt dui ut. A pellentesque sit amet porttitor eget. Interdum varius sit amet mattis vulputate enim nulla. Nisi lacus sed viverra tellus in. Non arcu risus quis varius quam quisque id diam vel. Tortor dignissim convallis aenean et tortor at risus. Egestas tellus rutrum tellus pellentesque. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Diam quam nulla porttitor massa id neque aliquam.

Integer enim neque volutpat ac tincidunt vitae. Dapibus ultrices in iaculis nunc. Et odio pellentesque diam volutpat commodo sed egestas egestas. Sem et tortor consequat id. Lobortis scelerisque fermentum dui faucibus in. Nisi est sit amet facilisis. Arcu dui vivamus arcu felis bibendum ut. Mauris pharetra et ultrices neque ornare aenean. Erat velit scelerisque in dictum non consectetur a erat. Ac felis donec et odio pellentesque. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Elementum nibh tellus molestie nunc non blandit massa enim.</string>

    <!-- Content Description -->
    <string name="article_image_content_desc">Article Image</string>
    <string name="return_content_desc">Return</string>
    <string name="email_headline">Email:</string>
    <string name="email_example">user@gmail.com</string>
    <string name="name_placeholder">Jhon Doe</string>
    <string name="change_picture">Change Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="post_options">Post Options</string>
    <string name="no_news">You don\'t have any posted articles</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="upload_image_content_desc">Upload Image</string>
    <string name="country_label">Country</string>
    <string name="headline_label">Headline</string>
    <string name="country_edit_text_hint">Enter the Country Where This Happened</string>
    <string name="headline_edit_text_hint">Enter your Headline</string>
    <string name="source_label">Source</string>
    <string name="source_edit_text_hint">Enter Article URL</string>
    <string name="description_label">Description</string>
    <string name="desc_edit_text_hint">Describe Your Article (optional)</string>
    <string name="create_post_btn_text">Post News</string>
    <string name="edit_post_btn_text">Save Changes</string>

    <string name="enter_headline">Enter article headline</string>
    <string name="enter_url">Enter URL of your source</string>
    <string name="enter_country">Enter the country this article happened in</string>
</resources>