<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">
       <ImageView
           android:layout_row="0"
           android:layout_column="0"
           android:layout_rowSpan="2"
            android:id="@+id/myNewsImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/article_image_content_desc" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:id="@+id/myNewsTitle"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/title_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/myNewsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/date"
        android:textSize="11sp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_gravity="bottom | start"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="bottom | end"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/post_options"
        android:src="@drawable/baseline_more_horiz_24"
        android:scaleY="1.5"
        android:scaleX="1.5"/>

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:id="@+id/myNewsCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/country_placeholder"
            android:textColor="@color/black"
            android:textSize="12sp"/>
</GridLayout>